# simple-ddl-parser

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  ARCHIVE_CHANGELOG.txt  CHANGELOG.md  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  pyproject.toml  test_updates.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci-tests-runner.yml  main.yml
docs/: README.rst
examples/: basic_usage.py  bigquery_schema.py  custom_schema.py  output_modes.py
schemas/: DATA_SYNC_HISTORY_schema.json
simple_ddl_parser/: __init__.py  cli.py  ddl_parser.py  exception.py  output.py  parser.out  parser.py  parsetab.py  tokens.py  utils.py
simple_ddl_parser/dialects/: __init__.py  athena.py  bigquery.py  hql.py  ibm.py  mssql.py  mysql.py  oracle.py  psql.py  redshift.py  snowflake.py  spark_sql.py  sql.py
simple_ddl_parser/output/: base_data.py  common.py  core.py  custom_schemas.py  dialects.py  table_data.py
tests/: test.sql  test_after_columns_statements.py  test_alter_statements.py  test_bigquery.py  test_checks.py  test_comments.py  test_common.py  test_create_database.py  test_custom_output_schema.py  test_custom_types_and_domains.py  test_ddl_settings.py  test_hql_output_mode.py  test_indexes.py  test_mssql_specific.py  test_mysql.py  test_oracle.py  test_read_from_file.py  test_redshift_dialect.py  test_references.py  test_sequences.py  test_simple_ddl_parser.py  test_snowflake.py  test_spark_sql.py  test_unique.py  test_utils.py
tests/dialects/: test_athena.py  test_bigquery.py  test_hql.py  test_hql_output_mode.py  test_ibm_db2.py  test_informix.py  test_mssql_specific.py  test_mysql.py  test_oracle.py  test_psql.py  test_redshift_dialect.py  test_snowflake.py  test_spark_sql.py
tests/non_statement_tests/: test_args.py  test_common.py
tests/sql/: mangos_encoding_test.sql  test.sql  test_one_table.sql  test_two_tables.sql
tests/unit/: test_simple_ddl_parser.py
