[tool.poetry]
name = "simple-ddl-parser"
version = "0.6.1"
description = "Simple DDL Parser to parse SQL & HQL ddl files to json/python dict with full information about columns: types, defaults, primary keys, etc."
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
license = "MIT"
readme = "docs/README.rst"
homepage = "https://github.com/xnuinside/simple-ddl-parser"
repository = "https://github.com/xnuinside/simple-ddl-parser"
classifiers = [
    "Programming Language :: PL/SQL",
    "Programming Language :: SQL",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
ply = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
m2r = "^0.2.1"
twine = "^3.3.0"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
sdp = 'simple_ddl_parser.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
