[tool.poetry]
name = "simple-ddl-parser"
version = "1.9.0"
description = "Simple DDL Parser to parse SQL & dialects like HQL, TSQL (MSSQL), Oracle, AWS Redshift, Snowflake, MySQL, PostgreSQL, etc ddl files to json/python dict with full information about columns: types, defaults, primary keys, etc.; sequences, alters, custom types & other entities from ddl."
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xnuinside/simple-ddl-parser"
repository = "https://github.com/xnuinside/simple-ddl-parser"
classifiers = [
    "Programming Language :: PL/SQL",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.9"
ply = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
twine = "^6.0"
black = ">=24,<26"
ruff = "^0.6.9"

[tool.poetry.scripts]
sdp = 'simple_ddl_parser.cli:main'

[tool.ruff]
exclude = ["simple_ddl_parser/parsetab.py", ".tox"]

[tool.black]
exclude = "(/\\.tox/|simple_ddl_parser/parsetab\\.py)"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
